--- a/configure.template
+++ b/configure.template
@@ -1,6 +1,6 @@
 
 AC_PREREQ([2.69])
-AC_INIT([grub2-theme-unexicon],[0.0.4],[http://github.com/bbidulock/grub2-theme-unexicon/issues],[unexicon-system],[https://github.com/bbidulock/grub2-theme-unexicon])
+AC_INIT([grub2-theme-unexicon],[0.0.4],[http://github.com/bbidulock/grub2-theme-unexicon/issues],[grub2-theme-unexicon],[https://github.com/bbidulock/grub2-theme-unexicon])
 AC_REVISION([0.0.4])
 
 AC_CONFIG_SRCDIR([configure.template])
